Commits related to Data Persistence

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,13 @@ camel.springboot.main-run-controller = true
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
+
+
+integration.demo.jmsInboundRouteUri = activemq:queue:subscriberQueue
+integration.demo.jmsInboundRouteOptions=
+integration.demo.instanceId= ${HOSTNAME}
+
+integration.demo.tradehub.jdbcUrl=jdbc:h2:~/TRADEHUB;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE;
+integration.demo.tradehub.username=sa
+integration.demo.tradehub.password=
+integration.demo.tradehub.driverClassName=org.h2.Driver
