--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-activemq'
 	implementation 'org.apache.camel:camel-spring-boot-starter:2.23.1'
 	compile group: 'org.apache.activemq', name: 'activemq-camel', version: '5.15.8'
-
-	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
 	compile group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
+	compile group: 'com.zaxxer', name: 'HikariCP', version: '3.1.0'
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.1.2.RELEASE'
+	compile group: 'org.apache.camel', name: 'camel-jaxb', version: '2.21.1'
+	compile group: 'com.googlecode.log4jdbc', name: 'log4jdbc', version: '1.2'
+	compile group: 'com.h2database', name:'h2',version: '1.4.194'
+	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.1'
+	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.1'
+	compile group: 'com.integralblue', name: 'log4jdbc-spring-boot-starter', version: '1.0.2'
 
 }
