adding mysql connection details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,20 @@ spring.activemq.user=admin
 spring.activemq.password=admin
 
 
-integration.demo.jmsInboundRouteUri = activemq:queue:subscriberQueue
+integration.demo.jmsInboundRouteUri = activemq:queue:writeQueue
 integration.demo.jmsInboundRouteOptions=
 integration.demo.instanceId= ${HOSTNAME}
 
-integration.demo.tradehub.jdbcUrl=jdbc:h2:~/TRADEHUB;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE;
-integration.demo.tradehub.username=sa
-integration.demo.tradehub.password=
-integration.demo.tradehub.driverClassName=org.h2.Driver
+#integration.demo.tradehub.jdbcUrl=jdbc:h2:~/TRADEHUB;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE;
+#integration.demo.tradehub.username=sa
+#integration.demo.tradehub.password=
+#integration.demo.tradehub.driverClassName=org.h2.Driver
+
+integration.demo.tradehub.jdbcUrl=jdbc:mysql://localhost:3306/TRADEHUB
+integration.demo.tradehub.username=root
+integration.demo.tradehub.password=root
+integration.demo.tradehub.driverClassName=com.mysql.jdbc.Driver
+
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
