changes to build file to create JAR

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,12 @@ dependencies {
 	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.1'
 	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.1'
 	compile group: 'com.integralblue', name: 'log4jdbc-spring-boot-starter', version: '1.0.2'
-	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
 
 
+}
+
+bootJar {
+	baseName = 'accelerator'
+	version =  '1.0.0'
 }
