adding adapter component

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,10 @@ integration.demo.tradehub.username=root
 integration.demo.tradehub.password=root
 integration.demo.tradehub.driverClassName=com.mysql.jdbc.Driver
 
+
+integration.adapter.demo.adapterInboundQueueUri=activemq:queue:adapterQueue
+integration.adapter.demo.adapterOutboundQueueUri=activemq:queue:testQueue
+
 # IN MEMORY H2 DATABASE CONNECTION DETAILS :
 
 #integration.demo.tradehub.jdbcUrl=jdbc:h2:~/TRADEHUB;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE;
