adding security subscriber component

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.activemq.password=admin
 integration.demo.jmsInboundRouteUri=activemq:queue:writeQueue
 integration.demo.jmsInboundRouteOptions=
 integration.demo.instanceId=${HOSTNAME}
+integration.demo.security.jmsInboundRouteUri=activemq:queue:securityOutboundQueue
+integration.demo.security.jmsInboundRouteOptions=
+integration.demo.security.instanceId=${HOSTNAME}
 integration.security.publish.demo.securityPublishInboundJmsUri=activemq:queue:securityInboundQueue
 integration.security.publish.demo.securityPublishOutboundJmsUri=activemq:queue:securityOutboundQueue
 integration.security.publish.demo.securityEodPublishInboundJmsUri=activemq:queue:securityEODInboundQueue
@@ -18,6 +21,12 @@ integration.demo.tradehub.jdbcUrl=jdbc:mysql://localhost:3306/TRADEHUB
 integration.demo.tradehub.username=root
 integration.demo.tradehub.password=root
 integration.demo.tradehub.driverClassName=com.mysql.jdbc.Driver
+
+integration.demo.markitedm.jdbcUrl=jdbc:mysql://localhost:3306/MARKITEDM
+integration.demo.markitedm.username=root
+integration.demo.markitedm.password=root
+integration.demo.markitedm.driverClassName=com.mysql.jdbc.Driver
+
 integration.adapter.demo.adapterInboundQueueUri=activemq:queue:adapterQueue
 integration.adapter.demo.adapterOutboundQueueUri=activemq:queue:testQueue
 # IN MEMORY H2 DATABASE CONNECTION DETAILS :
