intergration testing changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ camel.springboot.main-run-controller=true
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
-integration.demo.jmsInboundRouteUri=activemq:queue:writeQueue
+integration.demo.jmsInboundRouteUri=activemq:queue:tradeOutboundQueue
 integration.demo.jmsInboundRouteOptions=
 integration.demo.instanceId=${HOSTNAME}
 integration.demo.security.jmsInboundRouteUri=activemq:queue:securityOutboundQueue
@@ -13,8 +13,8 @@ integration.security.publish.demo.securityPublishInboundJmsUri=activemq:queue:se
 integration.security.publish.demo.securityPublishOutboundJmsUri=activemq:queue:securityOutboundQueue
 integration.security.publish.demo.securityEodPublishInboundJmsUri=activemq:queue:securityEODInboundQueue
 integration.security.publish.demo.securityEodPublishOutboundJmsUri=activemq:queue:securityEODOutboundQueue
-integration.publish.demo.tradePublishInboundJmsUri=activemq:queue:testQueue
-integration.publish.demo.tradePublishOutboundJmsUri=activemq:queue:writeQueue
+integration.publish.demo.tradePublishInboundJmsUri=activemq:queue:tradeInboundQueue
+integration.publish.demo.tradePublishOutboundJmsUri=activemq:queue:tradeOutboundQueue
 integration.publish.demo.tradeAckPublishJmsUri=activemq:queue:ackQueue
 
 integration.demo.tradehub.jdbcUrl=jdbc:mysql://localhost:3306/TRADEHUB
@@ -27,8 +27,11 @@ integration.demo.markitedm.username=root
 integration.demo.markitedm.password=root
 integration.demo.markitedm.driverClassName=com.mysql.jdbc.Driver
 
-integration.adapter.demo.adapterInboundQueueUri=activemq:queue:adapterQueue
-integration.adapter.demo.adapterOutboundQueueUri=activemq:queue:testQueue
+
+integration.adapter.demo.adpSecurityInboundQueueUri=activemq:queue:adapterSecurityInboundQueue
+integration.adapter.demo.adpSecurityOutboundQueueUri=activemq:queue:securityInboundQueue
+integration.adapter.demo.adpTradeInboundQueueUri=activemq:queue:adapterTradeInboundQueue
+integration.adapter.demo.adpTradeOutboundQueueUri=activemq:queue:tradeInboundQueue
 # IN MEMORY H2 DATABASE CONNECTION DETAILS :
 #integration.demo.tradehub.jdbcUrl=jdbc:h2:~/TRADEHUB;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE;
 #integration.demo.tradehub.username=sa
