added eod entry point in adp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.activemq.password=admin
 integration.demo.jmsInboundRouteUri=activemq:queue:tradeOutboundQueue
 integration.demo.jmsInboundRouteOptions=
 integration.demo.instanceId=${HOSTNAME}
-integration.demo.security.jmsInboundRouteUri=activemq:queue:securityOutboundQueue
+integration.demo.security.jmsInboundRouteUri=activemq:queue:securityEODOutboundQueue
 integration.demo.security.jmsInboundRouteOptions=
 integration.demo.security.instanceId=${HOSTNAME}
 integration.security.publish.demo.securityPublishInboundJmsUri=activemq:queue:securityInboundQueue
@@ -30,6 +30,8 @@ integration.demo.markitedm.driverClassName=com.mysql.jdbc.Driver
 
 integration.adapter.demo.adpSecurityInboundQueueUri=activemq:queue:adapterSecurityInboundQueue
 integration.adapter.demo.adpSecurityOutboundQueueUri=activemq:queue:securityInboundQueue
+integration.adapter.demo.adpEODSecurityInboundQueueUri=activemq:queue:adapterSecurityEODInboundQueue
+integration.adapter.demo.adpEODSecurityOutboundQueueUri=activemq:queue:securityEODInboundQueue
 integration.adapter.demo.adpTradeInboundQueueUri=activemq:queue:adapterTradeInboundQueue
 integration.adapter.demo.adpTradeOutboundQueueUri=activemq:queue:tradeInboundQueue
 # IN MEMORY H2 DATABASE CONNECTION DETAILS :
