--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,12 @@ dependencies {
 	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.1'
 	compile group: 'com.integralblue', name: 'log4jdbc-spring-boot-starter', version: '1.0.2'
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
+// https://mvnrepository.com/artifact/org.springframework.ws/spring-xml
+	compile group: 'org.springframework.ws', name: 'spring-xml', version: '2.0.3.RELEASE'
+	// https://mvnrepository.com/artifact/org.springframework.ws/spring-xml
+	compile group: 'org.springframework.ws', name: 'spring-xml', version: '2.4.2.RELEASE'
+
+
 
 
 }
