--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,13 @@ dependencies {
 // https://mvnrepository.com/artifact/com.fasterxml.woodstox/woodstox-core
     compile group: 'com.fasterxml.woodstox', name: 'woodstox-core', version: '5.0.1'
 
+    // https://mvnrepository.com/artifact/org.springframework.ws/spring-xml
+    compile group: 'org.springframework.ws', name: 'spring-xml', version: '2.0.3.RELEASE'
+    // https://mvnrepository.com/artifact/org.springframework.ws/spring-xml
+    compile group: 'org.springframework.ws', name: 'spring-xml', version: '2.4.2.RELEASE'
+
+
+
 
 }
 
