--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,10 @@ integration.adapter.demo.adpTradeOutboundQueueUri=activemq:queue:tradeInboundQue
 #integration.demo.tradehub.username=sa
 #integration.demo.tradehub.password=
 #integration.demo.tradehub.driverClassName=org.h2.Driver
+
+integration.adapter.demo.adpInboundDirURI=file://C:/Aparna/Macquarie/Accelerator/Adapter/Inbound/?delete=true
+integration.adapter.demo.adpOutboundDirURI=file://C:/Aparna/Macquarie/Accelerator/Adapter/Outbound?delete=true
+
+
+integration.adapter.demo.adpInboundDir=C:/Aparna/Macquarie/Accelerator/Adapter/Inbound
+integration.adapter.demo.adpOutboundDir=C:/Aparna/Macquarie/Accelerator/Adapter/Outbound
