Adding code to write FIXML to trade outbound folder

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,5 @@ integration.adapter.demo.adpOutboundDirURI=file://C:/Aparna/Macquarie/Accelerato
 
 integration.adapter.demo.adpInboundDir=C:/Aparna/Macquarie/Accelerator/Adapter/Inbound
 integration.adapter.demo.adpOutboundDir=C:/Aparna/Macquarie/Accelerator/Adapter/Outbound
+
+integration.publish.demo.fixmlOutboundDirURI=file://C:/Aparna/Macquarie/Accelerator/Trade/Outbound?fileName=
