--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,19 +3,19 @@ camel.springboot.main-run-controller=true
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
-integration.demo.jmsInboundRouteUri=activemq:queue:tradeOutboundQueue
+integration.demo.jmsInboundRouteUri=activemq:queue:TradeSubscribeQueue
 integration.demo.jmsInboundRouteOptions=
 integration.demo.instanceId=${HOSTNAME}
-integration.demo.security.jmsInboundRouteUri=activemq:queue:securityEODOutboundQueue
+integration.demo.security.jmsInboundRouteUri=activemq:queue:SecurityEODSubscribeQueue
 integration.demo.security.jmsInboundRouteOptions=
 integration.demo.security.instanceId=${HOSTNAME}
-integration.security.publish.demo.securityPublishInboundJmsUri=activemq:queue:securityInboundQueue
-integration.security.publish.demo.securityPublishOutboundJmsUri=activemq:queue:securityOutboundQueue
-integration.security.publish.demo.securityEodPublishInboundJmsUri=activemq:queue:securityEODInboundQueue
-integration.security.publish.demo.securityEodPublishOutboundJmsUri=activemq:queue:securityEODOutboundQueue
-integration.publish.demo.tradePublishInboundJmsUri=activemq:queue:tradeInboundQueue
-integration.publish.demo.tradePublishOutboundJmsUri=activemq:queue:tradeOutboundQueue
-integration.publish.demo.tradeAckPublishJmsUri=activemq:queue:ackQueue
+integration.security.publish.demo.securityPublishInboundJmsUri=activemq:queue:SecurityIntradayPublishQueue
+integration.security.publish.demo.securityPublishOutboundJmsUri=activemq:queue:SecurityIntradaySubscribeQueue
+integration.security.publish.demo.securityEodPublishInboundJmsUri=activemq:queue:SecurityEODPublishQueue
+integration.security.publish.demo.securityEodPublishOutboundJmsUri=activemq:queue:SecurityEODSubscribeQueue
+integration.publish.demo.tradePublishInboundJmsUri=activemq:queue:TradePublishQueue
+integration.publish.demo.tradePublishOutboundJmsUri=activemq:queue:TradeSubscribeQueue
+integration.publish.demo.tradeAckPublishJmsUri=activemq:queue:TradeAcknowledgmentQueue
 
 integration.demo.tradehub.jdbcUrl=jdbc:mysql://localhost:3306/TRADEHUB
 integration.demo.tradehub.username=root
@@ -28,23 +28,23 @@ integration.demo.markitedm.password=root
 integration.demo.markitedm.driverClassName=com.mysql.jdbc.Driver
 
 
-integration.adapter.demo.adpSecurityInboundQueueUri=activemq:queue:adapterSecurityInboundQueue
-integration.adapter.demo.adpSecurityOutboundQueueUri=activemq:queue:securityInboundQueue
-integration.adapter.demo.adpEODSecurityInboundQueueUri=activemq:queue:adapterSecurityEODInboundQueue
-integration.adapter.demo.adpEODSecurityOutboundQueueUri=activemq:queue:securityEODInboundQueue
-integration.adapter.demo.adpTradeInboundQueueUri=activemq:queue:adapterTradeInboundQueue
-integration.adapter.demo.adpTradeOutboundQueueUri=activemq:queue:tradeInboundQueue
+integration.adapter.demo.adpSecurityInboundQueueUri=activemq:queue:SecurityIntradayAdapterInputQueue
+integration.adapter.demo.adpSecurityOutboundQueueUri=activemq:queue:SecurityIntradayAdapterOutputQueue
+integration.adapter.demo.adpEODSecurityInboundQueueUri=activemq:queue:SecurityEODAdapterInputQueue
+integration.adapter.demo.adpEODSecurityOutboundQueueUri=activemq:queue:SecurityEODAdapterOutputQueue
+integration.adapter.demo.adpTradeInboundQueueUri=activemq:queue:TradeAdapterInputQueue
+integration.adapter.demo.adpTradeOutboundQueueUri=activemq:queue:TradeAdapterOutputQueue
 # IN MEMORY H2 DATABASE CONNECTION DETAILS :
 #integration.demo.tradehub.jdbcUrl=jdbc:h2:~/TRADEHUB;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE;
 #integration.demo.tradehub.username=sa
 #integration.demo.tradehub.password=
 #integration.demo.tradehub.driverClassName=org.h2.Driver
 
-integration.adapter.demo.adpInboundDirURI=file://C:/Aparna/Macquarie/Accelerator/Adapter/Inbound/?delete=true
-integration.adapter.demo.adpOutboundDirURI=file://C:/Aparna/Macquarie/Accelerator/Adapter/Outbound?delete=true
+integration.adapter.demo.adpInboundDirURI=file://C:/Aparna/Macquarie/Accelerator/Test/Adapter/Inbound/?delete=true
+integration.adapter.demo.adpOutboundDirURI=file://C:/Aparna/Macquarie/Accelerator/Test/Adapter/Inbound/Outbound?delete=true
 
 
-integration.adapter.demo.adpInboundDir=C:/Aparna/Macquarie/Accelerator/Adapter/Inbound
-integration.adapter.demo.adpOutboundDir=C:/Aparna/Macquarie/Accelerator/Adapter/Outbound
+integration.adapter.demo.adpInboundDir=C:/Aparna/Macquarie/Accelerator/Test/Adapter/Inbound
+integration.adapter.demo.adpOutboundDir=C:/Aparna/Macquarie/Accelerator/Test/Adapter/Inbound
 
-integration.publish.demo.fixmlOutboundDirURI=file://C:/Aparna/Macquarie/Accelerator/Trade/Outbound?fileName=
+integration.publish.demo.fixmlOutboundDirURI=file://C:/Aparna/Macquarie/Accelerator/Test/Trade/Outbound?fileName=
